--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "stat-mode",
+  "name": "@factoryfour/stat-mode",
   "version": "0.2.2",
   "description": "Offers convenient getters and setters for the stat `mode`",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/TooTallNate/stat-mode.git"
+    "url": "git+https://github.com/factoryfour/stat-mode.git"
   },
   "keywords": [
     "stat",
@@ -29,5 +29,8 @@
   },
   "scripts": {
     "test": "mocha --reporter spec"
+  },
+  "directories": {
+    "test": "test"
   }
 }
